
if (UNIX)
    #  INSTALL(DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/assets  DESTINATION ${CMAKE_INSTALL_PREFIX}/share/EricTheViking )
    #  INSTALL(DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/Menu  DESTINATION ${CMAKE_INSTALL_PREFIX}/share/EricTheViking )
    # INSTALL(DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/Maps  DESTINATION ${CMAKE_INSTALL_PREFIX}/share/EricTheViking )
    #INSTALL(DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/scripts  DESTINATION ${CMAKE_INSTALL_PREFIX}/share/EricTheViking )
    #INSTALL(FILES ${CMAKE_CURRENT_LIST_DIR}/user.settings DESTINATION ${CMAKE_INSTALL_PREFIX}/share/EricTheViking/ )
    #INSTALL(FILES ${CMAKE_CURRENT_LIST_DIR}/libEric.settings DESTINATION ${CMAKE_INSTALL_PREFIX}/share/EricTheViking/ )
    INSTALL(FILES ${CMAKE_CURRENT_LIST_DIR}/DefaultFont.ttf DESTINATION ${CMAKE_INSTALL_PREFIX}/share/mullemaus/)
else ()

    INSTALL(FILES ${CMAKE_CURRENT_LIST_DIR}/DefaultFont.ttf DESTINATION ${PROJECT_BINARY_DIR}/bin/data)
endif ()
